--- a/FMML_M9_Project_20220062.ipynb
+++ b/FMML_M9_Project_20220062.ipynb
@@ -1508,12 +1508,21 @@
         "\n",
         "After the application of data standardization and tuning the classifier parameters we achieve the following results:\n",
         "\n",
-        "* Accuracy: \n",
-        "* F1-score: \n",
-        "* Precision: \n",
-        "* Recall: \n",
+        "* Accuracy: 98.36%\n",
+        "* F1-score: 97.39% (+/- 0.02%)\n",
+        "* Precision: 99%(for 0) 97%(for 1)\n",
+        "* Recall: 98%\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TPlJbaQ9T80s"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
